# msa-manifest

./: .gitmodules  CMakeLists.txt  README.md
ext/: json.cmake
